Update content and fix overflow issue

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -304,6 +304,11 @@ a {
           animation-iteration-count: infinite;
 }
 
+.row {
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 @media only screen and (max-width: 800px) {
   body {
     -webkit-text-size-adjust: none;
